--- a/scgas/requirements.txt
+++ b/scgas/requirements.txt
@@ -1,10 +1,13 @@
 # Core Kedro dependencies
 kedro[jupyter]~=1.0.0
-kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, spark-sparkdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0
+kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter, yaml]>=3.0
 kedro-viz>=6.7.0
 
-# Big Data and Spark
-pyspark>=4.0.0
+# HTTP requests for API calls
+requests>=2.31.0
+
+# Big Data and Spark (comentado temporariamente)
+# pyspark>=4.0.0
 
 # Jupyter and Development Environment
 ipython>=8.10
@@ -14,6 +17,19 @@ notebook
 # Machine Learning and Data Science
 scikit-learn~=1.5.1
 seaborn~=0.12.1
+
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Testing and Development
+pytest>=7.0.0
+pytest-cov>=4.0.0
+pytest-mock>=3.10.0
+pytest-html>=3.1.0
+
+# YAML support
+PyYAML>=6.0.0
 
 # System dependencies
 setuptools; python_version >= "3.12"
