Adiciona novos arquivos e configurações para integração com Databricks
- Criação do arquivo `.gitignore` para ignorar arquivos específicos do Databricks.
- Adição do arquivo `databricks.yml` com a definição do bundle de ativos para o Kedro.
- Configuração do ambiente do VSCode para notebooks Jupyter.
- Atualização do arquivo `api_config.yml` com um corpo de requisição padrão para medições.
- Modificações no `catalog.yml` para utilizar novos tipos de datasets do Kedro.
- Criação de notebooks para exploração de dados e execução de pipelines no Databricks.
- Implementação do script `databricks_scgas_pipeline.py` para execução automatizada do pipeline.
- Adição de documentação detalhada nos notebooks e README para facilitar o uso e configuração.

Essas alterações visam aprimorar a integração com o Databricks e facilitar a execução do pipeline de dados.

--- a/scgas/conf/base/api_config.yml
+++ b/scgas/conf/base/api_config.yml
@@ -11,10 +11,18 @@ api_scgas:
       history_measurement: "/api/Variable/History/Measurement"
       variable_status: "/api/Variable/Status"
     
+    # Body padrão para consulta de medições
+    measurement_request_body:
+      idIntegracao: "VRTA-CLT-41-023-0001"
+      tagList: ["HistTotal"]
+      from: "2025-01-01T00:00:00.000-03:00"
+      to: "2025-08-07T00:00:00.000-03:00"
+      groupBy: "h"
+      calcBy: "val"
+    
     data_headers:
       "Content-Type": "application/json"
       "Accept": "*/*"
-      "Authorization": "Bearer {token}"
     
     auth_headers:
       "Content-Type": "application/json"
