--- a/scgas/conf/base/catalog.yml
+++ b/scgas/conf/base/catalog.yml
@@ -1,19 +1,24 @@
 # Configuração da API SCGAS
 api_config:
-  type: yaml.YAMLDataSet
+  type: kedro_datasets.yaml.YAMLDataset
   filepath: conf/base/api_config.yml
 
 # Credenciais (definidas em conf/local/credentials.yml)
 credentials:
-  type: yaml.YAMLDataSet
+  type: kedro_datasets.yaml.YAMLDataset
   filepath: conf/local/credentials.yml
 
 # Token de autenticação (output do primeiro node)
 auth_token:
-  type: json.JSONDataSet
+  type: kedro_datasets.json.JSONDataset
   filepath: data/02_intermediate/auth_token.json
 
 # Dados de medição coletados (output do segundo node)
 measurements_data:
-  type: json.JSONDataSet
+  type: kedro_datasets.json.JSONDataset
   filepath: data/02_intermediate/measurements_data.json
+
+# Dados processados com pandas (output do terceiro node)
+measurements_df:
+  type: kedro_datasets.pandas.CSVDataset
+  filepath: data/03_primary/measurements.csv
